other/rec-req/require-imagepullsecrets/.kyverno-test/resource.yaml
apiVersion: v1
kind: Pod
metadata:
  name: goodpod01
  namespace: awesomeapps
  labels:
    app: myapp
spec:
  containers:
  - name: nginx
    image: nginx:1.12
  imagePullSecrets:
  - name: myregistrykey
---
apiVersion: v1
kind: Pod
metadata:
  name: badpod01
  namespace: awesomeapps
  labels:
    app: myapp
spec:
  containers:
  - name: nginx
    image: nginx:1.12
---
apiVersion: v1
kind: Pod
metadata:
  name: skippod01
  namespace: awesomeapps
  labels:
    app: myapp
spec:
  containers:
  - name: nginx
    image: ghcr.io/nginx:1.12
